--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,5 +6,6 @@
     </head>
     <body>
         <h1>Lasagna</h1>
+        <p><a href="../index.html" target="_blank" rel="noopener noreferrer">Home</a></a></p>
     </body>
 </html>
