--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -5,7 +5,7 @@
         <title>Lasagna</title>
     </head>
     <body>
-        <p><a href="../index.html" target="_blank" rel="noopener noreferrer">Home</a></a></p>
+        <p><a href="../index.html" target="_blank" rel="noopener noreferrer">Home</a></p>
         <h1>Lasagna</h1>
 
     </body>
