--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,6 +7,8 @@
     <body>
         <p><a href="../index.html" target="_blank" rel="noopener noreferrer">Home</a></p>
         <h1>Lasagna</h1>
+        <img src="../images/lasagna.jpg" alt="A picture of a lasagna against a blue background">
+        
 
     </body>
 </html>
