--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,7 +8,16 @@
         <p><a href="../index.html" target="_blank" rel="noopener noreferrer">Home</a></p>
         <h1>Lasagna</h1>
         <img src="../images/lasagna.jpg" alt="A picture of a lasagna against a blue background" height="310" width="310">
-
+        <p>
+            This is my mom's special homemade lasagna recipe 
+            with a meaty, made-from-scratch tomato sauce and a 
+            deliciously cheesy filling. A more traditional homemade lasagna 
+            filling would be made with ricotta 
+            but my mom's recipe calls for a blend of 
+            small-curd cottage cheese and Parmesan. 
+            I have found none better anywhere. 
+            Serve with a leafy green salad and crusty garlic bread.
+        </p>
 
 
     </body>
