--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -18,6 +18,7 @@
             I have found none better anywhere. 
             Serve with a leafy green salad and crusty garlic bread.
         </p>
+        <h2>Ingredients</h2>
 
 
     </body>
