--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -19,6 +19,17 @@
             Serve with a leafy green salad and crusty garlic bread.
         </p>
         <h2>Ingredients</h2>
+        <ul>
+            <li>Meat</li>
+            <li>Onion</li>
+            <li>Canned tomatoes</li>
+            <li>Fresh herbs</li>
+            <li>Sugar</li>
+            <li>Spices and seasonings</li>
+            <li>Noodles</li>
+            <li>Cheese</li>
+            <li>Eggs</li>
+        </ul>
 
 
     </body>
