--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -32,6 +32,13 @@
         </ul>
 
         <h2>Steps</h2>
+        <ol>
+            <li>Cook the meat</li>
+            <li>Cook the noodles</li>
+            <li>Make the cheese layer</li>
+            <li>Assemble the lasagna</li>
+            <li>Bake the lasagna</li>
+        </ol>
 
     </body>
 </html>
