Add anchor tag linking to homepage

--- a/recipes/egg-fried-rice.html
+++ b/recipes/egg-fried-rice.html
@@ -5,6 +5,7 @@
         <title>Egg Fried Rice</title>
     </head>
     <body>
-        
+         <p><a href="../index.html" target="_blank" rel="noopener noreferrer">Home</a></p>
+         
     </body>
 </html>
