--- a/recipes/egg-fried-rice.html
+++ b/recipes/egg-fried-rice.html
@@ -6,6 +6,6 @@
     </head>
     <body>
          <p><a href="../index.html" target="_blank" rel="noopener noreferrer">Home</a></p>
-         
+         <h1>Egg Fried Rice</h1>
     </body>
 </html>
