--- a/recipes/egg-fried-rice.html
+++ b/recipes/egg-fried-rice.html
@@ -7,5 +7,6 @@
     <body>
          <p><a href="../index.html" target="_blank" rel="noopener noreferrer">Home</a></p>
          <h1>Egg Fried Rice</h1>
+         <p>This egg fried rice is quick to make with instant rice. It's easy to customize with other vegetables or leftover roast meat.</p>
     </body>
 </html>
