Add unordered list containing ingredients

--- a/recipes/egg-fried-rice.html
+++ b/recipes/egg-fried-rice.html
@@ -9,5 +9,15 @@
          <h1>Egg Fried Rice</h1>
          <p>This egg fried rice is quick to make with instant rice. It's easy to customize with other vegetables or leftover roast meat.</p>
          <h2>Ingredients</h2>
+         <ul>
+            <li>1 cup water</li>
+            <li>2 tablespoons soy sauce</li>
+            <li>1/2 teaspoon salt</li>
+            <li>1 teaspoon vegetable oil</li>
+            <li>1/2 onion, finely chopped</li>
+            <li>1/2 cup sliced green beans or peas</li>
+            <li>1 large egg, lightly beaten</li>
+            <li>1/4 teaspoon ground black pepper</li>
+         </ul>
     </body>
 </html>
