--- a/recipes/egg-fried-rice.html
+++ b/recipes/egg-fried-rice.html
@@ -19,5 +19,7 @@
             <li>1 large egg, lightly beaten</li>
             <li>1/4 teaspoon ground black pepper</li>
          </ul>
+
+         <h2>Steps</h2>
     </body>
 </html>
