--- a/recipes/egg-fried-rice.html
+++ b/recipes/egg-fried-rice.html
@@ -21,5 +21,12 @@
          </ul>
 
          <h2>Steps</h2>
+         <ol>
+            <li>Gather all ingredients</li>
+            <li>Bring water, soy sauce, and salt to a boil in a medium saucepan. Stir in instant rice and remove from heat. Cover and let stand for 5 minutes. </li>
+            <li> Heat oil in a medium skillet or wok over medium heat. Sauté onions and green beans or peas in hot oil for 2 to 3 minutes.</li>
+            <li>Pour in beaten egg and fry for 2 minutes, scrambling egg while it cooks. </li>
+            <li>Add cooked rice to egg mixture; mix well. Season with pepper.</li>    
+         </ol>
     </body>
 </html>
