--- a/recipes/egg-fried-rice.html
+++ b/recipes/egg-fried-rice.html
@@ -7,6 +7,7 @@
     <body>
          <p><a href="../index.html" target="_blank" rel="noopener noreferrer">Home</a></p>
          <h1>Egg Fried Rice</h1>
+         <img src="../images/egg-fried-rice.jpg" alt="A picture of a bowl containing egg fried rice with a spoon stuck in it, against a background of a green cloth" height="310" width="310">
          <p>This egg fried rice is quick to make with instant rice. It's easy to customize with other vegetables or leftover roast meat.</p>
          <h2>Ingredients</h2>
          <ul>
