--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <body>
         <h1>Odin Recipes</h1>
         <a href="recipes/lasagna.html" target="_blank" rel="noopener noreferrer">Lasagna</a>
-    `   <a href="recipes/egg-fried-rice.html" target="_blank" rel="noopener noreferrer">Egg Fried Rice</a>
+        <a href="recipes/egg-fried-rice.html" target="_blank" rel="noopener noreferrer">Egg Fried Rice</a>
     </body>
 </html>
