Add h1 heading tag

--- a/recipes/roasted_cauliflower.html
+++ b/recipes/roasted_cauliflower.html
@@ -5,6 +5,6 @@
         <title>Roasted Cauliflower</title>
     </head>
     <body>
-        
+        <h1>Roasted Cauliflower</h1>
     </body>
 </html>
