--- a/recipes/roasted_cauliflower.html
+++ b/recipes/roasted_cauliflower.html
@@ -6,5 +6,7 @@
     </head>
     <body>
         <h1>Roasted Cauliflower</h1>
+        <img src="../images/roasted-cauliflower.jpg" alt="Roasted in cauliflower in a blue bowl" height="310" width="310">
+        
     </body>
 </html>
