--- a/recipes/roasted_cauliflower.html
+++ b/recipes/roasted_cauliflower.html
@@ -7,6 +7,6 @@
     <body>
         <h1>Roasted Cauliflower</h1>
         <img src="../images/roasted-cauliflower.jpg" alt="Roasted in cauliflower in a blue bowl" height="310" width="310">
-        
+        <p>This easy cauliflower recipe is perfectly flavored with garlic and Parmesan cheese. Your family will enjoy this tender, oven-roasted cauliflower with any meal. My 11-year-old son loves this! Add more spices and herbs to suit your taste.</p>
     </body>
 </html>
