--- a/recipes/roasted_cauliflower.html
+++ b/recipes/roasted_cauliflower.html
@@ -14,6 +14,14 @@
             Add more spices and herbs to suit your taste.
         </p>
         <h2>Ingredients</h2>
+        <ul>
+            <li>3 tablespoons olive oil</li>
+            <li>2 tablespoons minced garlic</li>
+            <li>1 large head cauliflower, seperated into florets</li>
+            <li>salt and ground black pepper to taste</li>
+            <li>1/3 cup grated Parmesan cheese</li>
+            <li>1 tablespoon chopped fresh parsley</li>
+        </ul>
 
     </body>
 </html>
