--- a/recipes/roasted_cauliflower.html
+++ b/recipes/roasted_cauliflower.html
@@ -24,5 +24,16 @@
         </ul>
 
         <h2>Steps</h2>
+        <ol>
+            <li>Gather all ingredients</li>
+            <li>Preheat the oven to 450 degrees F (220 degrees C). Grease a 9x13-inch casserole dish. </li>
+            <li>Combine olive oil and garlic in a large resealable bag. Add cauliflower, seal the bag, and toss until cauliflower is coated. Pour into the prepared casserole dish and season with salt and pepper. </li>
+            <li>Roast in the preheated oven for 25 minutes, stirring halfway through.</li>
+            <li>Remove from the oven and turn on the broiler. </li>
+            <li>Sprinkle Parmesan cheese and parsley over the cauliflower. </li>
+            <li>Return to the oven and broil until golden brown, 3 to 5 minutes. </li>
+            <li>Serve hot and enjoy! </li>
+        
+        </ol>
     </body>
 </html>
