--- a/recipes/roasted_cauliflower.html
+++ b/recipes/roasted_cauliflower.html
@@ -5,6 +5,7 @@
         <title>Roasted Cauliflower</title>
     </head>
     <body>
+        <a href="../index.html" target="_blank" rel="noopener noreferrer">Home</a>
         <h1>Roasted Cauliflower</h1>
         <img src="../images/roasted-cauliflower.jpg" alt="Roasted in cauliflower in a blue bowl" height="310" width="310">
         <p>
