--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
         <h1>Odin Recipes</h1>
         <a href="recipes/lasagna.html" target="_blank" rel="noopener noreferrer">Lasagna</a>
         <a href="recipes/egg-fried-rice.html" target="_blank" rel="noopener noreferrer">Egg Fried Rice</a>
+        <a href="recipes/roasted_cauliflower.html" target="_blank" rel="noopener noreferrer">Roasted Cauliflower</a>
     </body>
 </html>
