--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/lasagna.html" target="_blank" rel="noopener noreferrer">Lasagna</a>
-        <a href="recipes/egg-fried-rice.html" target="_blank" rel="noopener noreferrer">Egg Fried Rice</a>
-        <a href="recipes/roasted_cauliflower.html" target="_blank" rel="noopener noreferrer">Roasted Cauliflower</a>
+        <p> <a href="recipes/lasagna.html" target="_blank" rel="noopener noreferrer">Lasagna</a></p>
+       
+        <p><a href="recipes/egg-fried-rice.html" target="_blank" rel="noopener noreferrer">Egg Fried Rice</a></p> 
+
+        <p><a href="recipes/roasted_cauliflower.html" target="_blank" rel="noopener noreferrer">Roasted Cauliflower</a></p> 
+ 
     </body>
 </html>
